@@ -1,21 +1,22 @@
 package com.max480.randomstuff.gae;
 
-import com.google.common.collect.ImmutableMap;
+import jakarta.servlet.annotation.WebServlet;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.text.similarity.LevenshteinDistance;
 import org.json.JSONArray;
 import org.json.JSONObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.ObjectInputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -28,8 +29,7 @@ import static com.max480.randomstuff.backend.celeste.crontabs.UpdateCheckerTrack
         "/celeste/gamebanana-search-reload", "/celeste/gamebanana-list", "/celeste/gamebanana-categories", "/celeste/gamebanana-info",
         "/celeste/random-map", "/celeste/gamebanana-featured", "/celeste/everest-versions", "/celeste/everest-versions-reload"})
 public class CelesteModSearchService extends HttpServlet {
-
-    private final Logger logger = Logger.getLogger("CelesteModSearchService");
+    private static final Logger log = LoggerFactory.getLogger(BinToJSONService.class);
 
     private static List<ModInfo> modDatabaseForSorting = Collections.emptyList();
     private Map<Integer, String> modCategories;
@@ -42,7 +42,7 @@ public class CelesteModSearchService extends HttpServlet {
             refreshModDatabase();
             refreshEverestVersions();
         } catch (Exception e) {
-            logger.log(Level.WARNING, "Warming up failed: " + e);
+            log.warn("Warming up failed!", e);
         }
     }
 
@@ -53,7 +53,7 @@ public class CelesteModSearchService extends HttpServlet {
                 refreshModDatabase();
             } else {
                 // invalid secret
-                logger.warning("Invalid key");
+                log.warn("Invalid key");
                 response.setStatus(403);
             }
             return;
@@ -62,7 +62,7 @@ public class CelesteModSearchService extends HttpServlet {
         if (request.getRequestURI().equals("/celeste/random-map")) {
             List<ModInfo> maps = modDatabaseForSorting.stream()
                     .filter(i -> "Mod".equals(i.type) && i.categoryId == 6800) // Map
-                    .collect(Collectors.toList());
+                    .toList();
 
             // pick a map and redirect to it. that's it.
             ModInfo drawnMod = maps.get((int) (Math.random() * maps.size()));
@@ -77,7 +77,7 @@ public class CelesteModSearchService extends HttpServlet {
             if (queryParam == null || queryParam.trim().isEmpty()) {
                 // the user didn't give any search!
                 response.setHeader("Content-Type", "text/plain");
-                logger.warning("Bad request");
+                log.warn("Bad request");
                 response.setStatus(400);
                 response.getWriter().write("\"q\" query parameter expected");
             } else {
@@ -104,7 +104,7 @@ public class CelesteModSearchService extends HttpServlet {
             if (!Arrays.asList("latest", "likes", "views", "downloads").contains(sortParam)) {
                 // invalid sort!
                 response.setHeader("Content-Type", "text/plain");
-                logger.warning("Bad request");
+                log.warn("Bad request");
                 response.setStatus(400);
                 response.getWriter().write("expected \"sort\" parameter with value \"latest\", \"likes\", \"views\" or \"downloads\"");
             } else {
@@ -114,7 +114,7 @@ public class CelesteModSearchService extends HttpServlet {
                     try {
                         page = Integer.parseInt(pageParam);
                     } catch (NumberFormatException e) {
-                        logger.info("Invalid page number, assuming 1");
+                        log.warn("Invalid page number, assuming 1");
                     }
                 }
 
@@ -131,24 +131,14 @@ public class CelesteModSearchService extends HttpServlet {
                 }
 
                 // determine the field on which we want to sort. Sort by descending id to tell equal values apart.
-                Comparator<ModInfo> sort;
-                switch (sortParam) {
-                    case "views":
-                        sort = Comparator.<ModInfo>comparingInt(i -> -i.views).thenComparingInt(i -> -i.id);
-                        break;
-                    case "likes":
-                        sort = Comparator.<ModInfo>comparingInt(i -> -i.likes).thenComparingInt(i -> -i.id);
-                        break;
-                    case "downloads":
-                        sort = Comparator.<ModInfo>comparingInt(i -> -i.downloads).thenComparingInt(i -> -i.id);
-                        break;
-                    case "latest":
-                        sort = Comparator.<ModInfo>comparingInt(i -> -i.createdDate).thenComparingInt(i -> -i.id);
-                        break;
-                    default:
-                        sort = null;
-                        break;
-                }
+                Comparator<ModInfo> sort = switch (sortParam) {
+                    case "views" -> Comparator.<ModInfo>comparingInt(i -> -i.views).thenComparingInt(i -> -i.id);
+                    case "likes" -> Comparator.<ModInfo>comparingInt(i -> -i.likes).thenComparingInt(i -> -i.id);
+                    case "downloads" ->
+                            Comparator.<ModInfo>comparingInt(i -> -i.downloads).thenComparingInt(i -> -i.id);
+                    case "latest" -> Comparator.<ModInfo>comparingInt(i -> -i.createdDate).thenComparingInt(i -> -i.id);
+                    default -> null;
+                };
 
                 // then sort on it.
                 Stream<ModInfo> responseBodyStream = modDatabaseForSorting.stream()
@@ -183,12 +173,12 @@ public class CelesteModSearchService extends HttpServlet {
                     itemid = Integer.parseInt(request.getParameter("itemid"));
                 }
             } catch (NumberFormatException e) {
-                logger.warning("Cannot parse itemid as number: " + e);
+                log.warn("Cannot parse itemid as number", e);
             }
 
             if (itemtype == null || itemid == null) {
                 // missing parameter
-                logger.warning("Bad request");
+                log.warn("Bad request");
                 response.setHeader("Content-Type", "text/plain");
                 response.setStatus(400);
                 response.getWriter().write("'itemtype' and 'itemid' query params should both be specified, and itemid should be a valid number");
@@ -205,7 +195,7 @@ public class CelesteModSearchService extends HttpServlet {
                     response.setHeader("Content-Type", "application/json");
                     response.getWriter().write(responseBody);
                 } else {
-                    logger.warning("Not found");
+                    log.warn("Not found");
                     response.setHeader("Content-Type", "text/plain");
                     response.setStatus(404);
                     response.getWriter().write("Not Found");
@@ -269,7 +259,7 @@ public class CelesteModSearchService extends HttpServlet {
                         return result;
                     })
                     .sorted(Comparator.comparing(result -> result.get("formatted").toString()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             // also add an "All" option to pass the total number of mods.
             Map<String, Object> all = new HashMap<>();
@@ -291,7 +281,7 @@ public class CelesteModSearchService extends HttpServlet {
                 refreshEverestVersions();
             } else {
                 // invalid secret
-                logger.warning("Invalid key");
+                log.warn("Invalid key");
                 response.setStatus(403);
             }
             return;
@@ -339,12 +329,15 @@ public class CelesteModSearchService extends HttpServlet {
     public static String formatGameBananaItemtype(String input, boolean pluralize) {
         // specific formatting for a few categories
         switch (input) {
-            case "Gamefile":
+            case "Gamefile" -> {
                 return pluralize ? "Game files" : "Game file";
-            case "Wip":
+            }
+            case "Wip" -> {
                 return pluralize ? "WiPs" : "WiP";
-            case "Gui":
+            }
+            case "Gui" -> {
                 return pluralize ? "GUIs" : "GUI";
+            }
         }
 
         // apply the spaced pascal case from Everest
@@ -378,19 +371,19 @@ public class CelesteModSearchService extends HttpServlet {
 
     // mapping takes an awful amount of time on App Engine (~2 seconds) so we can't make it when the user calls the API.
     private void refreshModDatabase() throws IOException {
-        // get and deserialize the mod list from Cloud Storage.
-        try (ObjectInputStream is = new ObjectInputStream(CloudStorageUtils.getCloudStorageInputStream("mod_search_database.ser"))) {
+        // get and deserialize the mod list from storage.
+        try (ObjectInputStream is = new ObjectInputStream(Files.newInputStream(Paths.get("/shared/celeste/mod-search-database.ser")))) {
             modDatabaseForSorting = (List<ModInfo>) is.readObject();
             modCategories = (Map<Integer, String>) is.readObject();
-            logger.fine("There are " + modDatabaseForSorting.size() + " mods in the search database.");
+            log.debug("There are " + modDatabaseForSorting.size() + " mods in the search database.");
         } catch (ClassNotFoundException e) {
             throw new IOException(e);
         }
     }
 
     private void refreshEverestVersions() throws IOException {
-        everestVersions = IOUtils.toByteArray(CloudStorageUtils.getCloudStorageInputStream("everest_version_list.json"));
-        logger.fine("Reloaded Everest versions! " + everestVersions.length + " bytes preloaded.");
+        everestVersions = IOUtils.toByteArray(Files.newInputStream(Paths.get("/shared/celeste/everest-versions.json")));
+        log.debug("Reloaded Everest versions! {} bytes preloaded.", everestVersions.length);
     }
 
     public static ModInfo getModInfoByTypeAndId(String itemtype, int itemid) {
